testsuite/tests/rename/should_compile/T11662_A.hs
module T11662_A where

data Rec = Rec { f :: Integer }
