testsuite/tests/rename/should_fail/T7943.hs
module T7943 where

data Foo = A { bar :: String }
          | B String { bar :: String }
